# AgentTown

./: .gitmodules  README.md  demo.mov
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test_client.py
backend/data/: evaluation_dataset.json  extraction_metadata.json
backend/src/: config.py  long_term_memory.py
backend/src/application/conversation_service/: generate_response.py  reset_conversation.py
backend/src/application/conversation_service/workflow/: __init__.py  chains.py  edges.py  graph.py  nodes.py  state.py  tools.py
backend/src/application/rag/: __init__.py  embeddings.py  retriever.py
backend/src/data/: deduplicate_documents.py  extract.py
backend/src/domain/: __init__.py  adaptive_agent.py  agent_factory.py  prompts.py
backend/src/infrastructure/: api.py  chat.py  memory.py  opik_utils.py
backend/tools/: create_long_term_memory.py  delete_long_term_memory.py
frontend/: .gitattributes  README.md
frontend/Assets/: Enemy.prefab  New Terrain 1.asset  New Terrain 2.asset
frontend/Assets/Asset Packs/Terrain Textures/: NewLayer 7.terrainlayer  (+1 more)
frontend/Assets/Game/: Follow Camera.prefab  Player.prefab
frontend/Assets/Scenes/: Sandbox.unity
frontend/Assets/Scripts/: AICompleteChatSetup.cs  Agent.cs  AutoChatUISetup.cs  ChatManager.cs  ChatSystemInitializer.cs  ChatUI.cs  Follow Camera.cs  Mover.cs  NPCNameDisplay.cs  ServerConnectionTester.cs  SimpleChatSetup.cs  WebSocketChatClient.cs  WebSocketDebugger.cs
frontend/ProjectSettings/: ProjectSettings.asset
(+51 files in other folders)
