[project]
name = "adaptive-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "datasketch>=1.6.5",
    "fastapi>=0.116.1",
    "ipython>=8.37.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "langchain-qdrant>=0.2.0",
    "langgraph==0.2.70",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "langgraph-checkpoint-postgres>=2.0.23",
    "loguru>=0.7.3",
    "motor>=3.3.0",
    "opik>=1.8.11",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.12.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
    "wikipedia>=1.4.0",
    "wsproto>=1.2.0",
]
